sfSandBoxCode/force-app/main/default/objects/Case_Opportunity_Item__c/Case_Opportunity_Item__c.object-meta.xml
<CustomObject>
    <label>Case Opportunity Item</label>
    <nameField>
        <displayFormat>COPP-{0000}</displayFormat>
        <label>Case Opportunity Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Opportunity Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>