sfSandBoxCode/force-app/main/default/objects/Case_Opportunity_Item__c/fields/Item_Division__c.field-meta.xml
<CustomField>
    <fullName>Item_Division__c</fullName>
    <formula>Rstk_Inventory_Item__r.InventoryItem__r.Item_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Division</label>
    <type>Text</type>
</CustomField>