sfSandBoxCode/force-app/main/default/objects/Case_Opportunity_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Case Opportunity Item</relationshipLabel>
    <relationshipName>Case_Opportunity_Item</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>