sfSandBoxCode/force-app/main/default/objects/Case_Opportunity_Item__c/fields/Rstk_Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Rstk_Inventory_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rstk Inventory Item</label>
    <referenceTo>Rootstock_Inventory_Item__c</referenceTo>
    <relationshipLabel>Case Opportunity Item</relationshipLabel>
    <relationshipName>Case_Opportunity_Item</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>